src/components/sidebar/components/sidebar-mobile-controls/sidebar-mobile-controls.module.css
.root {
  align-items: center;
  display: flex;
  justify-content: space-between;
  margin-bottom: 10px;
}

.backButton {
  padding-bottom: 7px;
  padding-left: 3px;
  padding-right: 9px;
  padding-top: 7px;
}

.forwardButton {
  padding-bottom: 7px;
  padding-left: 9px;
  padding-right: 3px;
  padding-top: 7px;
}

